--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 
 import SeoPage from "@/components/SeoPage.astro";
 import Team from "@/components/Team.astro";
-<!-- import MemberMap from "@/components/MemberMap.astro"; --> 
+// import MemberMap from "@/components/MemberMap.astro";  
 ---
 
 <BaseLayout>
