--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,7 +10,7 @@ import Navigation from "@/components/Navigation.astro";
   <BaseHead>
     <slot name="head" />
   </BaseHead>
-  <body class="bg-bg dark:bg-dark-bg">
+  <body>
     <Navigation />
     <div class="mx-auto max-w-screen-lg p-3 font-sans sm:p-6">
       <main class="min-h-[80vh]">
