Replaced bat images for frogs

--- a/src/pages/about/mission.astro
+++ b/src/pages/about/mission.astro
@@ -8,8 +8,8 @@ import { Content as MissionContent } from "@/content/about/mission.md";
 import { Content as ObjectivesContent } from "@/content/about/objectives.md";
 import { Content as PrinciplesContent } from "@/content/about/principles.md";
 
-import batImage from "@/images/bats/TrachopsMaslowski-25-3.jpg";
-import batImage2 from "@/images/bats/TrachopsMaslowski-5.jpg";
+import batImage from "@/images/bats/Hylorina.jpg";
+import batImage2 from "@/images/bats/B.taeniata.jpg";
 const headingStyles = "text-3xl font-bold tracking-tight sm:text-4xl underline";
 ---
 
