--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 
 // import News from "@/components/News.astro";
 import SeoPage from "@/components/SeoPage.astro";
-import batImage from "@/images/bats/TrachopsMaslowski-5.jpg";
+import batImage from "@/images/bats/R.darwinii.jpg";
 ---
 
 <BaseLayout>
@@ -35,7 +35,7 @@ import batImage from "@/images/bats/TrachopsMaslowski-5.jpg";
       <div class="mt-10">
         <Image
           src={batImage}
-          alt="Placeholder image"
+          alt="Rhinoderma darwinii"
           class="w-full rounded-md object-cover ring-1 ring-zinc-900/10"
         />
       </div>
