Added photo reference

--- a/src/pages/about/mission.astro
+++ b/src/pages/about/mission.astro
@@ -30,7 +30,7 @@ const headingStyles = "text-3xl font-bold tracking-tight sm:text-4xl underline";
             class="w-full object-cover"
           />
           <p class="mt-2 text-xs text-gray-500 italic">
-            Photo by Grant Maslowski
+            Photo by Bruno Bertin
           </p>
         </div>
         <div>
@@ -55,7 +55,7 @@ const headingStyles = "text-3xl font-bold tracking-tight sm:text-4xl underline";
             class="w-full object-cover"
           />
           <p class="mt-2 text-xs text-gray-500 italic">
-            Photo by Grant Maslowski
+            Photo by Gabriel Bidart
           </p>
         </div>
       </section>
