--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 
 // import News from "@/components/News.astro";
 import SeoPage from "@/components/SeoPage.astro";
-import batImage from "@/images/bats/R.darwinii.jpg";
+import batImage from "@/images/bats/Hylorinas.jpg";
 ---
 
 <BaseLayout>
