--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
+@import "tailwindcss";
+@import "./typography.css" layer(components);
+@import "tw-animate-css";
 @import "tailwindcss";
 @import "./typography.css" layer(components);
 @import "tw-animate-css";
@@ -121,6 +126,7 @@
 }
 
 @theme inline {
+  --font-family-poppins: 'Poppins', sans-serif;
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
