--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,15 +1,19 @@
 ---
 import { NAV_LINKS, SITE } from "@/siteConfig.ts";
 import { NavMenu } from "@/components/NavMenu.tsx";
+import { Image } from "astro:assets";
+import logo from "@/images/anuraworld.png";
 ---
 
 <header
   class="relative z-10 mx-auto flex max-w-screen-lg flex-wrap items-center justify-between p-3 pb-8 font-sans sm:p-6"
 >
   <a href={import.meta.env.BASE_URL} class="flex items-center gap-3">
-    <img 
-      src={`${import.meta.env.BASE_URL}images/anuraworld.png`}
+    <Image 
+      src={logo}
       alt="AnuraNet Logo" 
+      width={48}
+      height={48}
       class="h-10 w-10 sm:h-12 sm:w-12"
     />
     <span class="font-poppins text-3xl font-semibold text-black sm:text-3xl dark:text-white">
