Logo font color changed to emerald green, learn more button commented out

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -16,9 +16,9 @@ import logo from "@/images/anuraworld.png";
       height={64}
       class="h-14 w-14 sm:h-16 sm:w-16"
     />
-    <span class="font-poppins text-3xl font-semibold text-black sm:text-3xl dark:text-white">
-      {SITE.title}
-    </span>
+    <span class="font-poppins text-3xl font-semibold text-emerald-600 sm:text-3xl">
+  {SITE.title}
+</span>
   </a>
   <nav>
     <NavMenu links={Object.values(NAV_LINKS)} client:load />
