R. darwinii photo added to mission page. Logo edited in white

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,7 +2,7 @@
 import { NAV_LINKS, SITE } from "@/siteConfig.ts";
 import { NavMenu } from "@/components/NavMenu.tsx";
 import { Image } from "astro:assets";
-import logo from "@/images/anuraworld.png";
+import logo from "@/images/anuranet_white.png";
 ---
 
 <header
