--- a/src/pages/about/mission.astro
+++ b/src/pages/about/mission.astro
@@ -8,7 +8,7 @@ import { Content as MissionContent } from "@/content/about/mission.md";
 import { Content as ObjectivesContent } from "@/content/about/objectives.md";
 import { Content as PrinciplesContent } from "@/content/about/principles.md";
 
-import batImage from "@/images/bats/Hylorina.jpg";
+import batImage from "@/images/bats/R.darwinii.jpg";
 import batImage2 from "@/images/bats/B.taeniata.jpg";
 const headingStyles = "text-3xl font-bold tracking-tight sm:text-4xl underline";
 ---
@@ -30,7 +30,7 @@ const headingStyles = "text-3xl font-bold tracking-tight sm:text-4xl underline";
             class="w-full object-cover"
           />
           <p class="mt-2 text-xs text-gray-500 italic">
-            Photo by Bruno Bertin
+            Photo by Gabriel Bidart
           </p>
         </div>
         <div>
