Minor corrections on text

--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -7,7 +7,7 @@ import Team from "@/components/Team.astro";
 ---
 
 <BaseLayout>
-  <SeoPage slot="head" title="AnuraNet Team" />
+  <SeoPage slot="head" title="AnuraNET Team" />
 
   <main class="py-4 sm:py-4">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
@@ -16,10 +16,10 @@ import Team from "@/components/Team.astro";
         <div class="text-center">
           <h2 class="mb-4 text-3xl font-bold sm:text-4xl">A Global Network</h2>
           <p class="mx-auto max-w-3xl text-lg leading-relaxed">
-            We are a global community working at the intersection of bat
+            We are a global community working at the intersection of anuran
             research, conservation, and artificial intelligence (AI). Our
             members span the globe, bringing diverse expertise and a shared
-            interest for leveraging AI to protect bat biodiversity.
+            interest for leveraging AI to protect anuran biodiversity.
           </p>
         </div>
 
@@ -32,7 +32,7 @@ import Team from "@/components/Team.astro";
         <div class="text-center">
           <h2 class="mb-4 text-3xl font-bold sm:text-4xl">The Admin Team</h2>
           <p class="mx-auto max-w-3xl text-lg leading-relaxed">
-            We are the organisers and facilitators of the AnuraNet network.
+            We are the organisers and facilitators of the AnuraNET network.
           </p>
         </div>
 
