--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,7 +39,7 @@ import heroImage from "@/images/frogs/Hylorinas.jpeg";
           </h1>
 
           <p class="mt-6 text-lg leading-8 text-gray-100 drop-shadow-md animate-fade-in-delay">
-            AnuraNet is a collaborative expert network that promotes the development of vanguard techniques for acoustic monitoring of anurans and citizen-science. Our diverse community of researchers, technologists and conservationists that rise from Iberoamerican collaboration aims to foster and spread the tools key for enhancing our knowledge about anuran populations and their global trends.
+            AnuraNET is a collaborative expert network that promotes the development of vanguard techniques for acoustic monitoring of anurans and citizen-science. Our diverse community of researchers, technologists and conservationists that rise from Iberoamerican collaboration aims to foster and spread the tools key for enhancing our knowledge about anuran populations and their global trends.
           </p>
 
           <div class="mt-10 flex items-center justify-center gap-x-6 animate-fade-in-delay-2">
