Website map links fixed. Membership form color in dark theme fixed

--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "@/layouts/BaseLayout.astro";
 
 import SeoPage from "@/components/SeoPage.astro";
-import Team from "@/components/Team.astro";
+import TeamComponent from "@/components/Team.astro";
 // import MemberMap from "@/components/MemberMap.astro";  
 ---
 
@@ -37,7 +37,7 @@ import Team from "@/components/Team.astro";
         </div>
 
         <div class="mt-12">
-          <Team />
+          <TeamComponent />
         </div>
       </section>
     </div>
