Members map added whithout Google Cloud Service

--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -3,7 +3,7 @@ import BaseLayout from "@/layouts/BaseLayout.astro";
 
 import SeoPage from "@/components/SeoPage.astro";
 import TeamComponent from "@/components/Team.astro";
-// import MemberMap from "@/components/MemberMap.astro";  
+import MemberMap from "@/components/MemberMap.astro";  
 ---
 
 <BaseLayout>
@@ -11,7 +11,6 @@ import TeamComponent from "@/components/Team.astro";
 
   <main class="py-4 sm:py-4">
     <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-      <!--
       <section class="mt-8">
         <div class="text-center">
           <h2 class="mb-4 text-3xl font-bold sm:text-4xl">A Global Network</h2>
@@ -27,7 +26,6 @@ import TeamComponent from "@/components/Team.astro";
           <MemberMap />
         </div>
       </section>
-      -->
       <section class="mt-1">
         <div class="text-center">
           <h2 class="mb-4 text-3xl font-bold sm:text-4xl">The Admin Team</h2>
